make defaultValue handling part of caller